Fix layout bug in manage event view

--- a/sport-event-app/src/main/webapp/VAADIN/themes/mytheme/shame.scss
+++ b/sport-event-app/src/main/webapp/VAADIN/themes/mytheme/shame.scss
@@ -7,5 +7,10 @@
       margin-bottom: 5px;
     }
   }
+
+  .manage-event-h-layout {
+    padding-top: 15px;
+    padding-bottom: 37px;
+  }
 }
 
